[package]
name = "quickjs-sys"
version = "0.1.0"
authors = ["seu <seu@panopticon.re>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/flanfly/quickjs-sys"
homepage = "https://bellard.org/quickjs/"
documentation = "https://bellard.org/quickjs/quickjs.html"
description = "Low-level Rust bindings for Fabrice Bellards QuickJS Javascript Engine"

[dependencies]

[build-dependencies]
bindgen = "0.50"
